﻿<h3>Multifunction 02.00.00</h3>
<p class="Contributor">
    Chris Hammond <br />
    <a href="mailto:skins@christoc.com">skins@christoc.com</a><br />
    <a href="http://www.christoc.com">http://www.christoc.com</a><br />
</p>
<hr/>
<div class="License">
    <h3>About the MultiFunction Skin and Container Package</h3>
	<p>
        <b>Version 02.00.00</b>
		<ul>
			<li><h1>WARNING YOU WILL NEED TO RESIZE YOUR IMAGES AND CSS FOR THIS NEW SKIN, PLEASE TEST BEFORE USING IN PRODUCTION</h1></li>
			<li>Converted skin to be larger, 1200px instead of 960px wide</li>
			<li>New "Blank" container</li>
			<li>CSS Fixes for the Event Viewer word wrap in DNN 7.0</li>
			<li>Resized Header_Graphic.psd to be 169px height</li>
			<li>Utilizing DNN6/7 USER/LOGIN controls</li>
			<li>Added breadcrumb control</li>
			<li>Removed background color from Body on the popup skin</li>
			<li>Replaced default DNN7 Blue button color with greyscale color for multifunction</li>
			<li>Fixed an issue in the footer with UL margins</li>
			<li>Updated thumbnails for all skins and containers</li>
		</ul>
	</p>

    <p>
	<b>Version 01.03.00</b>
		<ul>
			<li>Converted Project to .NET 4.0 for DNN 7.* </li>
			<li>VS2012 Support </li>
			<li>CSS Updates for DNN 7.*</li>
			<li>Updated OrangeBox jQuery to version 3.0</li>
			<li>Updated CSS for OrangeBox version 3.0</li>
			<li>Requires DNN 7.0+</li>
		</ul>
	</p>
    <p>
	    <b>Version 01.02.00</b>
		<ul>
			<li>Removed the clearfix class and is now using dnnClear that ships with DotNetNuke </li>
			<li>Includes a popupSkin.ascx that is used for the iframe inside the DNN 6 modal windows.</li>
			<li>Removed control panel DIV tag from all skins as it isn't used in DNN6.</li>
			<li>Removed left/right borders from the paneOutline class in DNN so that the LAYOUT mode displays without wrapping</li>
			<li>Had a fix in place for SubMenu CSS when you have a long sub menu</li>
			<li>Compiled against v6.2.1, requires 6.2.1.</li>